--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nuke-kv",
-  "version": "1.5.0",
+  "version": "v1.5-stable ✨",
   "description": "Nuke-KV : High Performance Key-Value Store",
   "keywords": [
     "nuke-kv"
