--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -71,6 +71,11 @@
         "variant": "cpp",
         "list": "cpp",
         "future": "cpp",
-        "unordered_set": "cpp"
+        "unordered_set": "cpp",
+        "bitset": "cpp",
+        "csignal": "cpp",
+        "set": "cpp",
+        "regex": "cpp",
+        "cinttypes": "cpp"
     }
 }
